--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Brent Clark's Home Page</title>
+<title>Javier Rodriguez'<select name="" id="" disabled="disabled"></select> Home Page</title>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
 <h2>Projects</h2>
 <hr />
 <h2>Practice Assignments</h2>
-<a href="/Spring2016/practice/HTML1/practice1.htm">Practice 1</a>
+<a href="Practices/Practice1/Index.html">Practice 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="/Fall2015/practice/ExpWeb1/circle.html">Practice 2</a>
 
