--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/Index.html" target="_blank">Practice 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="/Fall2015/practice/ExpWeb1/circle.html">Practice 2</a>
+<a href="/Fall2015/practice/ExpWeb1/circle.html">Practice 1a</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/Practice2/cactus.html">Practice 2</a>
 
 <hr />
 <h2>Book Assignments</h2>
