--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="/Fall2015/practice/ExpWeb1/circle.html">Practice 1a</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="Practices/Practice2/cactus.html">Practice 2</a>
+<a href="Practices/Practice2/cactus.html" target="_blank">Practice 2</a>
 
 <hr />
 <h2>Book Assignments</h2>
