--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <a href="/Fall2015/practice/ExpWeb1/circle.html">Practice 1a</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice2/cactus.html" target="_blank">Practice 2</a>
-
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/Practice2/cactus.html" target="_blank">Practice 1B</a>
 <hr />
 <h2>Book Assignments</h2>
 
