made changes to properly upload
all changes were done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice1B/index.html" target="_blank">Practice 1B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="Projects/Project 1" target="_blank">Project1</a>
+<a href="Projects/Project1.html" target="_blank">Project1</a>
 <hr />
 <h2>Book Assignments</h2>
 
