moved to projects tab
wanted to see if its in the right spot

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <h1>Javier Rodriguez</h1>
 <hr />
 <h2>Projects</h2>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Project1/Project1.html" target="_blank">Project1</a>
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/Index.html" target="_blank">Practice 1</a>
