--- a/Projects/Project1/Project1.html
+++ b/Projects/Project1/Project1.html
@@ -11,66 +11,37 @@
 <h2>TraderJoes</h2> 
 <h2>https://www.traderjoes.com/home</h2>
 
-<h2>Question:</h2>
+<h2>Questions:</h2>
 
-<p>What was my first impression of the site?</p>
-<h2>Anwser:</h2>
-<p>It felt really smooth and bright. There were lots of bright colors that caught my attention and for the most part it was pretty ogranized as well.</p>
+<ol>
+    <li>What was my first impression of the site?</li>
+    <li>How does the inoformation flow on the websit? Any links that were on the websit?</li>
+    <li>Does the site strucutre make sense? Why?</li>
+    <li>Does the site multimedia enhance or detract away from the site?</li>
+    <li>How long did it take for the home page to load? Was the load time
+    reasonable?</li>
+    <li>Was the text color and size readable? If a background color or
+    image was used, did it enhance or detract from the site?</li>
+    <li>Did the site have a navigation bar or other navigation tool? Was the
+    navigation well done?</li>
+    <li>How does the site respond to smaller window sizes (responsive design)?</li>
+    li>What does this site offer that was unusual or very well done?</li>
+</ol>
 
-<h2>Quesiton:</h2>
 
-<p>How does the inoformation flow on the websit? Any links that were on the websit?</p>
-<h2>Anwser:</h2>
-<p>ALl and all, the site did flow very well it was all very linear and had all the categories needed. There were links and also click tabs that would then redirect you to get more information. It felt very smooth.</p>
+<h2>Anwsers:</h2>
 
-<h2>Question:</h2>
+<ol>
+    <li>It felt really smooth and bright. There were lots of bright colors that caught my attention and for the most part it was pretty ogranized as well.</li>
+    <li>All and all, the site did flow very well it was all very linear and had all the categories needed. There were links and also click tabs that would then redirect you to get more information. It felt very smooth.</li>
+    <li>I think so i didn't really feel confused at all, I felt like I could find my way around the problem. It was pretty basic to keep it honest.</li>
+    <li>I rearlly didn't think so, I felt like it was the perfect amount. It was a retail site, so it did enough to keep my attention and want me to move forward and hoepfully buy something.</li>
+    <li>It was instant, I honestly didn't even have to wait at all. It was great.</li>
+    <li>It was actually updated to follow the season that is going on during the year. So it was fall theme it was sweet. I thoguht that it was perfect and caught my attention</li>
+    <li>It had both, it had the main navigation and then it also had like a sub navigator, where we could find things per categories. It was pretty easy to work around</li>
+    <li>It sure did, it was based on the season that was going on. So it was very fall themed, which at the same time was also good marketing.</li>
+    <li>I think it was pretty good, can't say I know too much of a diffrence but it felt pretty respansive, without and delay or lag.</li>
+    <li>The interactive part of it was really cool. I felt like there were lots of buttons that you could click that would redirect you to other sites and it was really well done.</li>
+</ol>
+<br>
 
-<P>Does the site strucutre make sense? Why?</P>
-<h2>Anwser:</h2>
-<p>I think so i didn't really feel confused at all, I felt like I could find my way around the problem. It was pretty basic to keep it honest.</p>
-
-<h2>Question:</h2>
-
-<p>Does the site multimedia enhance or detract away from the site?</p>
-<h2>Anwser:</h2>
-<p>I rearlly didn't think so, I felt like it was the perfect amount. It was a retail site, so it did enough to keep my attention and want me to move forward and hoepfully buy something.</p>
-
-<h2>Quesiton:</h2>
-
-<p>How long did it take for the home page to load? Was the load time
-reasonable?</p>
-<h2>Anwser:</h2>
-<p>It was instant, I honestly didn't even have to wait at all. It was great.</p>
-
-<h2>Question:</h2>
-
-<p>Was the text color and size readable? If a background color or
-image was used, did it enhance or detract from the site?</p>
-<h2>Anwser:</h2>
-<p>It was actually updated to follow the season that is going on during the year. So it was fall theme it was sweet. I thoguht that it was perfect and caught my attention</p>
-
-<h2>Question:</h2>
-
-<p>Did the site have a navigation bar or other navigation tool? Was the
-navigation well done?</p>
-<h2>Anwser:</h2>
-<p>It had both, it had the main navigation and then it also had like a sub navigator, where we could find things per categories. It was pretty easy to work around</p>
-
-<h2>Question:</h2>
-
-<p>Did the site have a color scheme or look and feel that was repeated on all
-the pages?</p>
-<h2>Anwser:</h2>
-<p>It sure did, it was based on the season that was going on. So it was very fall themed, which at the same time was also good marketing.</p>
-
-<h2>Question:</h2>
-
-<p>How does the site respond to smaller window sizes (responsive design)?</p>
-<h2>Anwser:</h2>
-<p>I think it was pretty good, can't say I know too much of a diffrence but it felt pretty respansive, without and delay or lag.</p>
-
-<h2>Question:</h2>
-
-<p>What does this site offer that was unusual or very well done?</p>
-<h2>Anwser:</h2>
-<p>The interactive part of it was really cool. I felt like there were lots of buttons that you could click that would redirect you to other sites and it was really well done.</p>
