Added another website
Made the correct changes, and updated it

--- a/Projects/Project1/Project1.html
+++ b/Projects/Project1/Project1.html
@@ -25,7 +25,7 @@
     <li>Did the site have a navigation bar or other navigation tool? Was the
     navigation well done?</li>
     <li>How does the site respond to smaller window sizes (responsive design)?</li>
-    li>What does this site offer that was unusual or very well done?</li>
+    <li>What does this site offer that was unusual or very well done?</li>
 </ol>
 
 
@@ -45,3 +45,20 @@
 </ol>
 <br>
 
+<h2>Utah National Parks</h2> 
+<h2>https://www.utah.com/nationalparks/</h2>
+
+<h2>Anwsers:</h2>
+
+<ol>
+    <li>Well I mean to start off it was not even refreshing, it was sayying there was an error. I didn't do anything but go to the home page.</li>
+    <li>It felt find, it was pretty minimal. They really only had a little amount of catergories, and that was it.</li>
+    <li>Yeah it makes sense, seems like it's a website that is staight to the point, so it was pretty broad, so not really impressed.</li>
+    <li>It does, it is straight to the point, and the strucutre of it is divded into caterogies that tie to national parks in utah. So it's pretty simple.</li>
+    <li>To start there isn't really much, it's a singual foto that doesn't really make too much of a diffrece in my opinon</li>
+    <li>It loaded quick but there was nothing to really refresh.</li>
+    <li>Yup it had a section tab and navigation, so it was easy to find what was needed.</li>
+    <li>It responded fine, can't say that I noticed too much of a diffrence when it was smaller</li>
+    <li>Not going to lie, I wasn't really imperssed by this. The photo was great, but that was about it.</li>
+</ol>
+<br>
