Updated the Practice 3B on my index
made the change for 3B to pop up

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice1B/index.html" target="_blank">Practice 1B</a>
 <hr/>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/Practice 3B/glossary.html" target="_blank">Practice 3B</a>
+<hr/>
 <h2>Book Assignments</h2>
 
 
