--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <h2>Projects</h2>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/Project1/Project1.html" target="_blank">Project1</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Projects2/AboutUs.html" target="_blank">Project2</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Projects2/Tributes.html" target="_blank">Project2</a>
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/Index.html" target="_blank">Practice 1</a>
