--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/Project1/Project1.html" target="_blank">Project1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="Projects/Projects2/AboutUs.html" target="_blank">Project2</a>
+<a href="Projects/Projects2/AboutUs.html" target="_blank">Project2 AboutUs</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="Projects/Projects2/Tributes.html" target="_blank">Project2</a>
+<a href="Projects/Projects2/Tributes.html" target="_blank">Project2 Tributes</a>
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/Index.html" target="_blank">Practice 1</a>
