--- a/Projects/Projects2/Tributes.html
+++ b/Projects/Projects2/Tributes.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 <h1 id="Top"> Tributes to Extreme Honeymoons</h1>
-<h1>Tributes to Extreme Honeymoons</h1>
 
 <p>
 <blockquote>
@@ -77,7 +76,7 @@ Peter and Polly Renquist
 </p>
 
 
-
+<a href="#Top"> to Top</a>
  
 </body>
 </html>
