Title update tributes
made the upadtes

--- a/Projects/Projects2/Tributes.html
+++ b/Projects/Projects2/Tributes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Tributes: Extreme Honeymoons</title>
 </head>
 <body>
 <h1 id="Top"> Tributes to Extreme Honeymoons</h1>
