--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <hr/>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice 3B/glossary.html" target="_blank">Practice 3B</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/Practice4A/index.html" target="_blank">Practice 4A</a>
 <hr/>
 <h2>Book Assignments</h2>
 
