--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <a href="Practices/Practice 3B/glossary.html" target="_blank">Practice 3B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice4A/index.html" target="_blank">Practice 4A</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/Practice 4B/CSS3Fonts.html" target="_blank">Practice 4B</a>
 <hr/>
 <h2>Book Assignments</h2>
 
