--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <a href="Practices/Practice1B/index.html" target="_blank">Practice 1B</a>
 <hr/>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/Practice3A/index.html" target="_blank">Practice 3A</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice 3B/glossary.html" target="_blank">Practice 3B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice4A/index.html" target="_blank">Practice 4A</a>
