Updated my index
added practice 5a

--- a/Practices/Practice5/HTML 5/index.html
+++ b/Practices/Practice5/HTML 5/index.html
@@ -22,6 +22,18 @@ body{
 	padding-left: 10px;
 }
 
+a:link 
+{
+	color: #041F3C;
+}
+a:visited
+{
+	color: #6583A2
+}
+a:hover
+{
+	color: #89D07B
+}
 
 
 
