--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <a href="Practices/Practice4A/index.html" target="_blank">Practice 4A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice 4B/CSS3Fonts.html" target="_blank">Practice 4B</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/Practice5/HTML 5/index.html" target="_blank">Practice 5</a>
 <hr/>
 <h2>Book Assignments</h2>
 
