--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <a href="Practices/Practice 4B/CSS3Fonts.html" target="_blank">Practice 4B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice5/HTML 5/index.html" target="_blank">Practice 5</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/Practice 5B/Chap13/bistro.html" target="_blank">Practice 5B</a>
 <hr/>
 <h2>Book Assignments</h2>
 
