--- a/Projects/Project3/Tributes.html
+++ b/Projects/Project3/Tributes.html
@@ -3,6 +3,75 @@
 <head>
 <meta charset="UTF-8">
 <title>Tributes: Extreme Honeymoons</title>
+<style>
+  @font-face {
+    font-family: 'Arial';
+    src: url(Arial.ttf);
+
+  }
+
+  @font-face {
+    font-family: 'Fantasy';
+    src: url(Fantasy.ttf);
+  }
+
+  body{
+    font-family: Arial, sans-serif;
+    margin: 0 15% 0;
+    background-color: #ffefe0;
+    line-height: 1.6;
+    color:#a700f5;
+
+  }
+  .thumbnailleft{
+    float: left;
+    padding-right: 5px;
+  }
+  .thumbnailright{
+    float: right;
+    padding-left: 5px;
+  }
+
+h1{ 
+  text-align: center;
+  padding: 1em;
+  background-color: #EBCFB5;
+  color: #a700f5;
+  font-size: 2em;
+  font-weight: bold;
+  font-family: Fantasy, cursive;
+  font-weight: bolder;
+}
+h2{
+  color: #a700f5;
+  font-family: Fantasy, cursive;
+  text-align: left;
+  font-size: 1.2em;
+  font-family: Fantasy, cursive;
+}
+h3{
+  color: #a700f5;
+  font-family: Fantasy, cursive;
+  text-align: left;
+  font-size: 1em;
+  font-family: Fantasy, cursive;
+}
+  a:link{
+    color: #ff1f19;
+  }
+  a:visited{
+    color: #5f0026;
+  }
+  a:hover{
+    color: #B90500;
+  }
+
+  hr{
+    color: #B90500;
+    
+  }
+
+</style>
 </head>
 <body>
 <h1 id="Top"> Tributes to Extreme Honeymoons</h1>
@@ -15,6 +84,7 @@ the excursions offered by Extreme Honeymoons.  Something I always wanted to do w
 cougar hunt was available the week just after we were to be married.  It was great to have all the details of this 
 trip taken care of for us by professionals who knew just what was needed. 
 </blockquote>
+<img src = "../../img_and_Res/ExtremeHoneymoneys/Tributes/hunt2.jpg" alt="Hunt" width="250" height="188" class="thumbnailright">
 <blockquote>
 The owners even provided some archery instruction for both of us before the trip began.
 We met our hunt leader, Tom Henry, the first day of our trip.  He runs a team of 4 hound dogs when he hunts cougars. 
@@ -32,6 +102,7 @@ Brian and Kitty Jones
 
 <p>
 <blockquote>
+ <img src = "../../img_and_Res/ExtremeHoneymoneys/Tributes/SkiCouple1Sm.jpg" alt="Couples skiing" width="250" height="166" class="thumbnailright">
 We just wanted to thank you folks at Extreme Honeymoons for a rip-roaring time during our honeymoon trip.  I had always 
 wanted to try heliskiing, and my honeymoon seemed as good a time to go for it.  Both my wife Mary and I are experienced 
 downhill skiers, but we had never tried extreme skiing or snowboarding before.
@@ -60,6 +131,7 @@ I wanted to give my new wife, Louise, an exciting honeymoon. I have been riding 
 Both Louise and I are in fairly good shape, so the mountain biking trip over the red rock of Moab was the trip we 
 wanted for ourselves.
 </blockquote>
+ <img src = "../../img_and_Res/ExtremeHoneymoneys/Tributes/CoupleHikingSm.jpg" alt="Couples Hiking" width="250" height="171" class="thumbnailright">
 <blockquote>
 The bed and breakfast inn we stayed in down in Moab was great. We had an early breakfast 
 and then were transferred along with our equipment and a light lunch to the trail head.  We were provided with a 
