--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <a href="Projects/Projects2/AboutUs.html" target="_blank">Project2 AboutUs</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/Projects2/Tributes.html" target="_blank">Project2 Tributes</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Project3/AboutUs.html" target="_blank">Project3 About Us</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Project3/Tributes.html" target="_blank">Project3 Tributes</a>
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/Index.html" target="_blank">Practice 1</a>
