--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 <a href="Practices/Practice5/HTML 5/index.html" target="_blank">Practice 5</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice 5B/Chap13/bistro.html" target="_blank">Practice 5B</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/Pracetice6B/HTML6-1/table.html" target="_blank">Practice 6B</a>
+
 <hr/>
 <h2>Book Assignments</h2>
 
