updated my index page for fun
changed the color haha

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <title>Javier Rodriguez'<select name="" id="" disabled="disabled"></select> Home Page</title>
 </head>
+<style>
+ body{
+    background-color: antiquewhite;
+ }
+</style>
 
 <body>
 <h1>Javier Rodriguez</h1>
