--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  body{
     background-color: antiquewhite;
  }
+
 </style>
 
 <body>
@@ -24,6 +25,10 @@
 <a href="Projects/Project3/AboutUs.html" target="_blank">Project3 About Us</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/Project3/Tributes.html" target="_blank">Project3 Tributes</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Project4/AboutUs.html" target="_blank">Project 4 About Us</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Project4/Tributes.html" target="_blank">Project4 Tributes</a>
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/Index.html" target="_blank">Practice 1</a>
