--- a/Practices/Practice 6A/Tables.html
+++ b/Practices/Practice 6A/Tables.html
@@ -6,11 +6,12 @@
 <title>HTML 6A</title>
  <style>
     table {
-      border-collapse: collapse;
+     border: none;
       width: 50%;
       margin: 20px auto;
       font-family: Arial, sans-serif;
       background: orange;
+      box-shadow: 0 4px rgba(0, 0, 0, 0.1);
     }
     th, td {
       border: 1px solid #444;
@@ -27,6 +28,19 @@
       font-weight: bold;
       margin-bottom: 10px;
     }
+tr:first-child th:first-child {
+  border-top-left-radius: 12px;
+}
+tr:first-child th:last-child {
+  border-top-right-radius: 12px;
+}
+tr:last-child td:first-child {
+  border-bottom-left-radius: 12px;
+}
+tr:last-child td:last-child {
+  border-bottom-right-radius: 12px;
+}
+
 </style>
 
 </head>
