--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 <a href="Practices/Practice 5B/Chap13/bistro.html" target="_blank">Practice 5B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Pracetice6B/HTML6-1/table.html" target="_blank">Practice 6B</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/Practice 6A/Tables.html" target="_blank">Practice 6A</a>
 
 <hr/>
 <h2>Book Assignments</h2>
