--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 <a href="Projects/Project4/AboutUs.html" target="_blank">Project 4 About Us</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/Project4/Tributes.html" target="_blank">Project4 Tributes</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Project5/Graphics.html" target="_blank">Project5 Graphics</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Project5/index.html" target="_blank">Project5 Index</a>
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/Index.html" target="_blank">Practice 1</a>
