--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 <a href="Practices/Pracetice6B/HTML6-1/table.html" target="_blank">Practice 6B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice 6A/Tables.html" target="_blank">Practice 6A</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Practices/JavaScript Practice1/Javascript1/" target="_blank">JavaScriptP1</a>
 
 <hr/>
 <h2>Book Assignments</h2>
