--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/Practice 6A/Tables.html" target="_blank">Practice 6A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="Practices/JavaScript Practice1/Javascript1/" target="_blank">JavaScriptP1</a>
+<a href="Practices/JavaScript Practice1" target="_blank">JavaScriptP1</a>
 
 
 <hr/>
