--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 <a href="Projects/Project5/Graphics.html" target="_blank">Project5 Graphics</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/Project5/index.html" target="_blank">Project5 Index</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Project6/Graphics.html" target="_blank">Project6</a>
+
 <hr />
 <h2>Practice Assignments</h2>
 <a href="Practices/Practice1/Index.html" target="_blank">Practice 1</a>
@@ -61,6 +64,7 @@
 <a href="Practices/Practice 6A/Tables.html" target="_blank">Practice 6A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Practices/JavaScript Practice1" target="_blank">JavaScriptP1</a>
+
 
 
 <hr/>
