--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <a href="Projects/Project5/index.html" target="_blank">Project5 Index</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="Projects/Project6/Graphics.html" target="_blank">Project6</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="Projects/Project7/home.html" target="_blank">Project7</a>
 
 <hr />
 <h2>Practice Assignments</h2>
